--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "crud_app"
 version = "0.1.0"
-authors = ["ofaroque <ofaroque@amazon.com>"]
+authors = ["ofaroque <ofaroque@faroque.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -12,3 +12,5 @@ actix-rt = "1.1.1"
 rusoto_dynamodb = "0.44.0"
 rusoto_core = "0.44.0"
 serde_dynamodb = "0.2.1"
+tokio-core = "0.1.17"
+fake = "2.2"
